--- a/client/form.html
+++ b/client/form.html
@@ -2,9 +2,9 @@
   <div class="form-container ">
     <nav class="nav-container">
       <a href="#" class="home btn">Back to home</a>
-      <a href="#" class="taskDetail btn">Search for Task details</a>
+      <h1 class="center color"> Add Task Detail</h1>
+      <a href="#" class="taskDetail btn">View Task details</a>
     </nav>
-    <h2 class="center">Task Detail</h2>
     <form class="form-wrapper addTask" action="index.html" method="post">
       <fieldset class="box">
         <legend>Task-Detail</legend>
