--- a/client/form-layout.html
+++ b/client/form-layout.html
@@ -7,10 +7,10 @@
 </body>
  <template name="home">
    <div class="home-container">
-     <h2>Task Remainder</h2>
+     <h2 class="very-large">Task Remainder</h2>
      <nav class="nav-wrapper">
        <a href="#" class="btn taskInsetion">Add Task</a>
-       <a href="#" class="btn taskDetail">Search for Task details</a>
+       <a href="#" class="btn taskDetail">View Task details</a>
      </nav>
    </div>
 </template>
