--- a/client/form.html
+++ b/client/form.html
@@ -8,6 +8,8 @@
     <form class="form-wrapper addTask" action="index.html" method="post">
       <fieldset class="box">
         <legend>Task-Detail</legend>
+        <label for="taskName">Task Name</label>
+        <input class="task-name box box-size" type="text" id="taskName" name="taskName" placeholder="Task Name" required>
         <label for="from">From </label>
         <input class="from box box-size" id="from" type="time" name="from" value="" required>
         <label for="to">To</label>
